--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -16,6 +16,6 @@
     .nav-item-icon {
         width: 24px;
         height: 24px;
-        fill: currentColor; // Ensure SVG uses the text color
+        fill: currentColor;
     }
 }
