--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,42 +1,47 @@
 // Primary Colors
-$primary-color: #735BF2; // Main accent color
-$primary2-color: #917CFF; // Secondary primary accent
-$secondary-color: #6D6D6D; // Secondary
+$primary-color: #735BF2;
+$primary2-color: #917CFF;
+$secondary-color: #6D6D6D;
 
 // Background Colors
-$background-black: #121212; // Main app background
-$background-dark: #1C1C1E; // Dark background
-$background-graphite: #2C2C2E; // Graphite background 1f1f1f
+$background-black: #121212;
+$background-dark: #1C1C1E;
+$background-graphite: #2C2C2E;
 
 // Text Colors
-$white-color: #FFFFFF; // Light text for dark themes
-$text-muted: #888888; // Muted text color
+$white-color: #FFFFFF;
+$text-muted: #888888;
 
 // Contextual Colors
-$error-color: #F44336; // Error
-$green-color: #4CAF50; // Success (Green)
-$yellow-color: #FFCA28; // Warning (Yellow)
-$orange-color: #FF5722; // Alert (Orange)
-$light-color: #C7C7C7; // Light gray (e.g., disabled states)
+$error-color: #F44336;
+$green-color: #4CAF50;
+$yellow-color: #FFCA28;
+$orange-color: #FF5722;
+$light-color: #C7C7C7;
 
 // Border and Shadow Colors
-$border-color: rgba(255, 255, 255, 0.2); // Light border
-$shadow-color: rgba(0, 0, 0, 0.5); // Shadow for elements
+$border-color: rgba(255, 255, 255, 0.2);
+$shadow-color: rgba(0, 0, 0, 0.5);
 
 // Font Variables
-$font-family: 'Arial', sans-serif; // Default font for the app
-$font-size-base: 16px; // Base font size
-$font-size-small: 14px; // Small font size
-$font-size-large: 18px; // Large font size
+$font-family-primary: 'Exo 2', sans-serif;
+$font-size-base: 16px;
+$font-size-small: 14px;
+$font-size-large: 18px;
+$font-size-h1: 2.5rem;
+$font-size-h2: 2rem;
+$font-size-h3: 1.75rem;
+$font-size-subline: 1rem;
+$font-size-body: 1rem;
 
 // Spacing Variables
-$padding-small: 8px; // Small padding
-$padding-standard: 20px; // Standard padding
-$padding-large: 32px; // Large padding
-$margin-small: 8px; // Small margin
-$margin-standard: 16px; // Standard margin
-$margin-large: 32px; // Large margin
+$padding-small: 8px;
+$padding-standard: 20px;
+$padding-large: 32px;
+$margin-small: 8px;
+$margin-standard: 16px;
+$margin-large: 32px;
 
 // Dimensions
-$sidebar-width: 250px; // Sidebar fixed width
-$border-radius: 4px; // Rounded corners for elements
+$sidebar-width: 250px;
+$border-radius: 4px;
