--- a/src/styles/components/nav-item.scss
+++ b/src/styles/components/nav-item.scss
@@ -1,40 +1,28 @@
-@import '../_variables';
-
-.navbar {
-  display: flex;
-  flex-direction: column;
-  gap: $padding-standard;
-
-  .nav-item {
+.nav-item {
     display: flex;
     align-items: center;
-    color: $text-muted;
+    gap: 8px;
     text-decoration: none;
+    color: $white-color;
     font-size: $font-size-base;
-    padding: $padding-standard;
+    padding: 8px 12px;
     border-radius: 4px;
-    transition: background-color 0.3s, color 0.3s;
-
-    &:hover {
-      background-color: $background-dark;
-      color: $primary-color;
-    }
-
+    transition: color 0.3s ease, background-color 0.3s ease;
+  
     &.active {
       color: $primary-color;
-    }
-
-    &__icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 24px;
-      height: 24px;
-      margin-right: 8px; // Space between icon and label
-    }
-
-    &__label {
       font-weight: bold;
     }
+  
+    &:hover {
+      color: $primary2-color;
+    }
+  
+    .nav-item-icon {
+      width: 24px;
+      height: 24px;
+      fill: currentColor;
+      transition: fill 0.3s ease;
+    }
   }
-}
+  
