--- a/src/styles/composite/sidebar.scss
+++ b/src/styles/composite/sidebar.scss
@@ -1,52 +1,53 @@
+@import '../_variables';
+
 .sidebar {
-    width: 250px;
-    height: 100vh;
-    background-color: #1f1f1f; /* Slightly lighter dark for contrast */
-    color: #fff;
+  width: $sidebar-width;
+  height: 100vh;
+  background-color: $background-dark;
+  color: $white-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: $padding-standard;
+
+  &-logo {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
-  
-    &-logo {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 20px;
-  
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-    }
-  
-    &-links {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-  
-      a {
-        color: #aaaaaa; /* Default light gray text */
-        text-decoration: none;
-        font-size: 16px;
-        padding: 8px 12px;
-        border-radius: 4px;
-        transition: color 0.3s;
-  
-        &:hover {
-          color: #a855f7; /* Purple hover color */
-        }
-  
-        &.active {
-          color: #a855f7; /* Purple color for active state */
-          font-weight: bold; /* Optional: make active links bold */
-        }
-      }
-    }
-  
-    &-footer {
-      font-size: 12px;
-      text-align: center;
-      color: #aaaaaa; /* Light gray for unimportant footer text */
+    justify-content: center;
+    margin-bottom: $margin-standard;
+
+    img {
+      max-width: 100%;
+      height: auto;
     }
   }
-  
+
+  &-links {
+    display: flex;
+    flex-direction: column;
+    gap: $margin-standard;
+
+    a {
+      color: $light-color;
+      text-decoration: none;
+      font-size: $font-size-base;
+      padding: 8px 12px;
+      border-radius: 4px;
+      transition: color 0.3s;
+
+      &:hover {
+        color: $primary2-color;
+      }
+
+      &.active {
+        color: $primary-color;
+        font-weight: bold;
+      }
+    }
+  }
+
+  &-footer {
+    font-size: $font-size-small;
+    text-align: center;
+    color: $light-color;
+  }
+}
