--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,30 +1,45 @@
+@import '../_variables';
+
 .home-hero {
-    height: 100vh;
-    background-image: url('/src/assets/bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    color: #fff;
-  }
-  
-  .home-overlay {
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 2rem;
-    text-align: center;
-    border-radius: 8px;
-  }
-  
-  .home-title {
-    font-size: 3rem;
-    font-weight: bold;
-  }
-  
-  .home-subtitle {
-    font-size: 1.5rem;
-    margin-top: 1rem;
-  }
-  
+  height: 100vh;
+  background-image: url('/src/assets/bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  color: $white-color;
+}
+
+.home-overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 2rem;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.home-title {
+  font-size: $font-size-h1;
+  font-weight: bold;
+}
+
+.home-subtitle {
+  font-size: $font-size-h3;
+  margin-top: $margin-small;
+}
+
+.home-actions {
+  margin-top: $margin-large;
+  display: flex;
+  gap: $margin-standard; // Adds spacing between buttons
+  justify-content: center;
+}
+
+.home-buttons {
+  margin-top: $margin-large;
+  display: flex;
+  gap: $margin-standard; // Adds spacing between MenuButton and FilterButton
+  justify-content: center;
+}
