--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -38,15 +38,15 @@ html, body, #root {
   padding: $padding-standard;
 }
 
-@import './components/button.scss';
+@import './elements/button.scss';
 @import './components/card.scss';
 @import './components/pagination.scss';
 @import './components/user-badge.scss';
 @import './components/navbar.scss';
 
-@import './composite/layout.scss';
-@import './composite/movies-list.scss';
-@import './composite/sidebar.scss';
+@import './sections/layout.scss';
+@import './sections/movies-list.scss';
+@import './sections/sidebar.scss';
 
-@import './pages/home.scss';
+@import './pages/home-page.scss';
 @import './pages/movies-page.scss';
