--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,7 @@
 @import './_variables.scss';
 @import '@fontsource/exo-2/index.css';
 
-
+/* Reset and Global Styles */
 * {
   margin: 0;
   padding: 0;
@@ -13,40 +13,35 @@ html, body, #root {
   font-size: $font-size-base;
   background-color: $background-black;
   color: $white-color;
-  min-height: 100%;
+  min-height: 100%; // Ensure the layout stretches fully
 }
 
+/* Layout Structure */
 .layout {
   display: flex;
-  min-height: 100vh;
+  min-height: 100vh; // Full viewport height
 
-  & > :first-child {
-    flex: 0 0 $sidebar-width;
-  }
-
-  &-main {
-    flex-grow: 1;
+  .layout-main {
+    flex-grow: 1; // Takes remaining space after the sidebar
+    overflow-y: auto; // Allows scrolling for main content
     padding: $padding-standard;
     background-color: $background-black;
     color: $white-color;
-    overflow-y: auto;
   }
 }
 
-.main-content {
-  flex-grow: 1;
-  padding: $padding-standard;
-}
-
+/* Component Imports */
 @import './elements/button.scss';
 @import './components/card.scss';
 @import './components/pagination.scss';
 @import './components/user-badge.scss';
 @import './components/navbar.scss';
 
+/* Section-Specific Styles */
 @import './sections/layout.scss';
 @import './sections/movies-list.scss';
 @import './sections/sidebar.scss';
 
+/* Page-Specific Styles */
 @import './pages/home-page.scss';
 @import './pages/movies-page.scss';
