--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -41,6 +41,9 @@ $padding-large: 32px;
 $margin-small: 8px;
 $margin-standard: 16px;
 $margin-large: 32px;
+$gap-small: 8px;
+$gap-medium: 16px;
+$gap-large: 24px;
 
 // Dimensions
 $sidebar-width: 250px;
