--- a/src/styles/pages/home-page.scss
+++ b/src/styles/pages/home-page.scss
@@ -2,7 +2,7 @@
 
 .home-hero {
   width: 100%; // Full width of the screen
-  min-height: 100vh; // Ensure it takes the full viewport height
+  height: calc(100vh - 76px);
   padding: $padding-large; // Add some padding
   background: url('@/assets/bg.jpg') center/cover no-repeat; // Hero background
   display: flex;
