--- a/src/styles/sections/user-controls.scss
+++ b/src/styles/sections/user-controls.scss
@@ -3,36 +3,37 @@
 .user-controls {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: $padding-standard;
-  padding: $padding-standard;
-  background-color: $background-dark;
-  border-bottom: 1px solid $border-color;
+  justify-content: space-between;
+  padding: $padding-standard $padding-large;
+  background-color: $background-black;
 
-  .user-controls-search {
-    flex-grow: 1;
-    max-width: 300px;
-  }
+  position: sticky; /* Sticky instead of fixed */
+  top: 0; /* Sticks to the top of the container */
+  z-index: 100; /* Ensure it stays above content */
 
-  .filter-button {
-    cursor: pointer;
+
+  &__actions {
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: $background-graphite;
-    color: $white-color;
-    border: 1px solid $border-color;
-    transition: background-color 0.2s ease;
+    gap: $gap-medium;
+  }
 
-    &:hover {
-      background-color: $primary2-color;
+  &__search {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+
+    input {
+      margin-right: $gap-small;
+      width: 100%;
     }
   }
 
-  .user-badge {
-    margin-left: auto;
+  &__filter {
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
