--- a/src/styles/pages/home-page.scss
+++ b/src/styles/pages/home-page.scss
@@ -1,10 +1,10 @@
 @import '../_variables.scss';
 
 .home-hero {
-  width: 100%; // Full width of the screen
+  width: 100%;
   height: calc(100vh - 76px);
-  padding: $padding-large; // Add some padding
-  background: url('@/assets/bg.jpg') center/cover no-repeat; // Hero background
+  padding: $padding-large;
+  background: url('@/assets/bg.jpg') center/cover no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,15 +14,39 @@
 
   .home-title {
     font-size: $font-size-h1;
-    margin-bottom: $gap-medium;
+    margin-bottom: $gap-large;
   }
 
   .home-subtitle {
     font-size: $font-size-subline;
+    color: $text-muted;
     margin-bottom: $gap-large;
   }
 
   button {
     font-size: $font-size-large;
+    padding: $padding-small $padding-standard;
+    border-radius: $border-radius;
+    background-color: $primary-color;
+    color: $white-color;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: $primary2-color;
+    }
+  }
+}
+
+.movies-sections {
+  padding: $padding-standard;
+
+  .movies-section {
+    margin-bottom: $gap-large;
+
+    h2 {
+      font-size: $font-size-h2;
+      color: $white-color;
+      margin-bottom: $gap-medium;
+    }
   }
 }
