--- a/src/styles/pages/movie-detail-page.scss
+++ b/src/styles/pages/movie-detail-page.scss
@@ -22,36 +22,9 @@
         justify-content: center;
         gap: $gap-medium;
         position: absolute;
-        bottom: -50px; // Position the icons below the poster
+        bottom: -50px;
         left: 50%;
         transform: translateX(-50%);
-        width: auto;
-
-        .toggle-button {
-          background: none;
-          border: none;
-          cursor: pointer;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          transition: opacity 0.2s ease, fill 0.2s ease;
-
-          .toggle-button-icon {
-            width: 60px;
-            height: 60px;
-            fill: currentColor; // Ensure color sync with current state
-            opacity: 0.7; // Default semitransparent state
-          }
-
-          &:hover .toggle-button-icon {
-            opacity: 1; // Brighten on hover
-          }
-
-          &.active .toggle-button-icon {
-            fill: $primary-color; // Active state color
-            opacity: 1; // Full opacity for active state
-          }
-        }
       }
     }
 
@@ -75,7 +48,19 @@
         gap: $gap-small;
         margin-bottom: $margin-standard;
 
-        .rating,
+        .rating {
+          display: flex;
+          align-items: center;
+          gap: $gap-small;
+          font-size: $font-size-body;
+
+          .star-icon {
+            width: 16px;
+            height: 16px;
+            fill: $primary-color;
+          }
+        }
+
         .runtime,
         .release {
           font-size: $font-size-body;
@@ -85,25 +70,24 @@
       .overview {
         font-size: $font-size-body;
         line-height: 1.5;
-      }
-    }
-  }
-
-  .movie-meta {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: $gap-medium;
-
-    .meta-section {
-      h3 {
-        font-size: $font-size-large;
-        margin-bottom: $margin-small;
-        color: $secondary-color;
+        margin-bottom: $margin-large;
       }
 
-      p {
-        font-size: $font-size-body;
-        color: $white-color;
+      .meta-info {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
+        gap: $gap-medium;
+
+        h3 {
+          font-size: $font-size-large;
+          color: $secondary-color;
+          margin-bottom: $margin-small;
+        }
+
+        p {
+          font-size: $font-size-body;
+          color: $white-color;
+        }
       }
     }
   }
