--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -2,10 +2,10 @@
 
 .navbar {
     display: flex;
-    flex-direction: column; /* Arrange items vertically */
-    align-items: flex-start; /* Align items to the left */
-    gap: $gap-large; /* Spacing between nav items */
-    padding-left: $padding-large; /* Padding on the left for alignment */
+    flex-direction: column;
+    align-items: flex-start;
+    gap: $gap-large;
+    padding-left: $padding-large;
 }
 
 .nav-item {
