--- a/src/styles/elements/button.scss
+++ b/src/styles/elements/button.scss
@@ -14,9 +14,9 @@
   }
 
   &--medium {
-    padding: 0 1rem; // Matches IconButton size
+    padding: 0 1rem;
     font-size: $font-size-base;
-    height: 40px; // Same height as IconButton medium
+    height: 40px;
   }
 
   &--large {
