--- a/src/styles/pages/movies-page.scss
+++ b/src/styles/pages/movies-page.scss
@@ -2,7 +2,7 @@
 
 .movies-page {
   .movies-list {
-    margin-bottom: $gap-large; // Space between movie list and pagination
+    margin-bottom: $gap-large;
   }
 
   .pagination {
