--- a/src/styles/sections/filter-bar.scss
+++ b/src/styles/sections/filter-bar.scss
@@ -41,7 +41,7 @@
     .genre-selection,
     .filter-rating-range,
     .filter-year-range {
-      margin-bottom: $gap-medium;  // Add spacing between each filter
+      margin-bottom: $gap-medium;
     }
   }
 
