--- a/src/styles/components/pagination.scss
+++ b/src/styles/components/pagination.scss
@@ -1,33 +1,34 @@
+@import '../_variables';
+
 .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
-  
-    &__button {
-      background-color: #333;
-      color: #fff;
-      border: none;
-      padding: 0.5rem 1rem;
-      margin: 0 0.25rem;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-  
-      &:hover:not(:disabled) {
-        background-color: #6a5acd;
-      }
-  
-      &.active {
-        background-color: #6a5acd;
-        font-weight: bold;
-      }
-  
-      &:disabled {
-        background-color: #777;
-        color: #ccc;
-        cursor: not-allowed;
-      }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: $margin-large;
+
+  &__button {
+    background-color: $background-dark;
+    color: $white-color;
+    border: none;
+    padding: $padding-small $padding-standard;
+    margin: 0 $margin-small;
+    border-radius: $border-radius;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover:not(:disabled) {
+      background-color: $primary-color;
+    }
+
+    &.active {
+      background-color: $primary-color;
+      font-weight: bold;
+    }
+
+    &:disabled {
+      background-color: $background-dark;
+      color: $text-muted;
+      cursor: not-allowed;
     }
   }
-  
+}
