--- a/src/styles/pages/page.scss
+++ b/src/styles/pages/page.scss
@@ -1,9 +1,9 @@
 @import '../_variables.scss';
 
 .page {
-  max-width: 1200px; // Centralize max width for all pages
-  margin: 0 auto; // Center align the content
-  padding: $padding-large; // Add consistent padding
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: $padding-large;
   box-sizing: border-box;
-  color: $white-color; // Default text color
+  color: $white-color;
 }
