--- a/src/styles/sections/user-controls.scss
+++ b/src/styles/sections/user-controls.scss
@@ -6,11 +6,9 @@
   justify-content: space-between;
   padding: $padding-standard $padding-large;
   background-color: $background-black;
-
-  position: sticky; /* Sticky instead of fixed */
-  top: 0; /* Sticks to the top of the container */
-  z-index: 100; /* Ensure it stays above content */
-
+  position: sticky;
+  top: 0;
+  z-index: 100;
 
   &__actions {
     display: flex;
