--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,17 +25,15 @@ a {
 }
 
 /* Component Imports */
-@import './elements/button.scss';
-@import './components/card.scss';
-@import './components/pagination.scss';
-@import './components/user-badge.scss';
-@import './components/navbar.scss';
+// @import './elements/button.scss';
+// @import './components/card.scss';
+// @import './components/pagination.scss';
+// @import './components/user-badge.scss';
 
-/* Section-Specific Styles */
-@import './sections/layout.scss';
-@import './sections/movies-list.scss';
-@import './sections/sidebar.scss';
+// @import './sections/layout.scss';
+// @import './sections/movies-list.scss';
+// @import './sections/sidebar.scss';
 
-/* Page-Specific Styles */
-@import './pages/home-page.scss';
-@import './pages/movies-page.scss';
+
+// @import './pages/home-page.scss';
+// @import './pages/movies-page.scss';
